# HimariBot

./: .env.dev  README.md  bot.py  pyproject.toml
data/autoreply/: reply-error.yml
data/db/: follow_withdraw.db.db
data/draw_card/: azur.json  ba.json  fgo.json  fgo_card.json  genshin.json  genshin_arms.json  guardian.json  onmyoji.json  pcr.json  pretty.json  pretty_card.json  prts.json
data/draw_card/draw_card_up/: azur_up_char.json  genshin_up_char.json  prts_up_char.json
data/xiuxian/: xiuxian.db  xiuxian_impart.db  境界.json  宗门玩法配置.json  灵根.json  灵根_beifen.json  突破概率.json
data/xiuxian/boss掉落物/: boss掉落物.json
data/xiuxian/丹药/: 礼包.json  神物.json
data/xiuxian/功法/: 主功法 - 副本.json  主功法 copy.json  主功法.json  功法概率设置.json  神通 - 副本.json  神通.json
src/plugins/: __init__.py
src/plugins/60s/: __init__.py
src/plugins/CyberSensoji/: __init__.py
src/plugins/GenshinUID/GenshinUID/: __init__.py
src/plugins/analysis_bilibili/: __init__.py  analysis_bilibili.py
src/plugins/batarot/: __init__.py  commands.py  utils.py
src/plugins/bili_push/: __init__.py
src/plugins/bilibilibot/: __init__.py
src/plugins/bilibilibot/bili_src/: bili_client.py  bili_dynamic_dbg.py
src/plugins/bread_shop/: __init__.py  config.py
src/plugins/chat_test/: __init__.py
src/plugins/draw_card/: __init__.py  config.py
src/plugins/draw_card/handles/: ba_handle.py  genshin_handle.py  guardian_handle.py
src/plugins/eventdone/: __init__.py
src/plugins/follow_withdraw/: __init__.py  utils.py
src/plugins/hanayori/: __init__.py  data_source.py  model.py
src/plugins/help/: __init__.py  handler.py
src/plugins/imgsearch/: __init__.py  ascii2d.py
src/plugins/memes/: __init__.py  manager.py  utils.py
src/plugins/nonebot_plugin_easy_group_manager/: __init__.py
src/plugins/nonebot_plugin_memes_api/: __init__.py  depends.py  manager.py
src/plugins/nonebot_plugin_nikke/: __init__.py
src/plugins/nonebot_plugin_nikke/commands/: character_picture.py  character_rating.py
src/plugins/nonebot_plugin_nikke/json/: character_data.json  character_rating.json
src/plugins/nonebot_plugin_p5generator/: generator.py
src/plugins/nonebot_plugin_pjsk/: config.py
src/plugins/nonebot_plugin_setu_collection/api/: Anosu.py  Lolicon.py
src/plugins/nonebot_plugin_xiuxian_2/: __init__.py
src/plugins/ollama/: __init__.py
src/plugins/picsearcher/: __init__.py
src/plugins/plugin_manager/: __init__.py
src/plugins/school_idol_mst/: __init__.py
src/plugins/sys_notice/: __init__.py
src/plugins/twitter/: __init__.py
src/plugins/what2eat/: __init__.py
src/service/: __init__.py
src/service/nonebot_plugin_alconna/: matcher.py
src/utils/: __init__.py  sql.py
(+20 files in other folders)
